--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 			<version>3.0.3</version>
 		</dependency>
 		<dependency>
-			<groupId>com.akiban</groupId>
-			<artifactId>akiban-sql-parser</artifactId>
-			<version>1.0.16</version>
+			<groupId>com.github.jsqlparser</groupId>
+			<artifactId>jsqlparser</artifactId>
+			<version>0.9.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -90,7 +90,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>1.2</version>
 				<executions>
 					<execution>
 						<phase>validate</phase>
