--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: java
 jdk:
   - oraclejdk8
 
-install: mvn clean package -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 -DskipTests=true
+install: mvn -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 -DskipTests clean package
